# sphinx-autodoc-typehints-confusion

./: .gitignore  pyproject.toml
doc/source/: conf.py  index.rst
src/mypkg/: __init__.py
