[tool.poetry]
name = "sphinx-autodoc-test"
version = "0.1.0"
description = ""
authors = ["Dominik Gresch <dominik.gresch@ansys.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mypkg", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
